syntax = "proto3";

package cloud.lianmi.im.team;
option go_package = "github.com/lianmi/servers/api/proto/team";

//
//离开群组请求
message LeaveTeamReq {
    //群组ID
    //是否必须：是
    string teamId = 1;
}
//
//离开群组响应
message LeaveTeamRsp {

}
